--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.username=root
-spring.datasource.url=jdbc:mysql:${url}?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://${url}?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 spring.datasource.password=${password}
+logging.level.org.springframework.jdbc.core = TRACE
