--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 logging.level.org.springframework.jdbc.core = TRACE
+
+spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://${url}?rewriteBatchedStatements=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.password=${password}
